# OpenCV-Hotshots-Marker-Based-AR

./: README.md
Example_MarkerBasedAR/: AppDelegate.h  AppDelegate.m  BGRAVideoFrame.h  CMakeLists.txt  CameraCalibration.cpp  CameraCalibration.hpp  EAGLView.h  EAGLView.m  Example_MarkerBasedAR-Prefix.pch  GeometryTypes.cpp  GeometryTypes.hpp  Marker.cpp  Marker.hpp  MarkerBasedArTest.cpp  MarkerDetector.cpp  MarkerDetector.hpp  SimpleVisualizationController.h  SimpleVisualizationController.mm  TinyLA.cpp  TinyLA.hpp  VideoSource.h  VideoSource.mm  ViewController.h  ViewController.mm  main.m
Example_MarkerBasedAR.xcodeproj/: project.pbxproj
